# predicate

./: README.md  requirements.txt  setup.cfg
examples/1_vbof/: config.yml
examples/2_vbof_copy_numbers/: config.yml  prot_sequences.fasta
examples/3_hde/: config.yml
examples/4_full_config/: config.yml
examples/MERS/: KT006149.2.fasta  config.yml  uniprotkb_proteome_UP000144472_2023_10_04.fasta
src/predicate/: config.py  main.py  predicate.py  utils.py
