[metadata]
name = predicate
url = https://github.com/
version = 0.0.1
author = Alex Oarga
author_email = 718123@unizar.es
description = PREDICtor of Antiviral TargEs (PREDICATE)
long_description = file: README.md, CHANGELOG.rst, LICENSE
long_description_content_type = text/markdown
;keywords = one, two
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
python_requires = >=3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
	= src
install_requires =
    pymcadre
    biopython
    OmegaConf
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    predicate = predicate.main:predicate
